# PubX

./: .gitignore  README.md  main.py  pyproject.toml
app/controllers/: account_controller.py  publication_controller.py
app/models/: __init__.py  account_model.py  publication_record_model.py
app/services/: database.py
app/views/: account_view.py  main_window.py  publication_view.py
publishers/: xiaohongshu_publisher.py
